--- a/profiler-operator/pom.xml
+++ b/profiler-operator/pom.xml
@@ -11,5 +11,17 @@
 
     <artifactId>profiler-operator</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.30</version>
+        </dependency>
+        <dependency>
+            <groupId>me.zyee</groupId>
+            <artifactId>profiler-base</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
