--- a/profiler-theoretical/pom.xml
+++ b/profiler-theoretical/pom.xml
@@ -23,6 +23,11 @@
             <version>29.0-jre</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
