--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
             <version>1.7.30</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.6.28</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -52,7 +58,7 @@
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.14</version>
+                <version>4.13</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
