--- a/profiler-core/pom.xml
+++ b/profiler-core/pom.xml
@@ -11,5 +11,22 @@
 
     <artifactId>profiler-core</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>me.zyee</groupId>
+            <artifactId>profiler-report</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.zyee</groupId>
+            <artifactId>profiler-operator</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.zyee</groupId>
+            <artifactId>profiler-theoretical</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
