--- a/profiler-core/pom.xml
+++ b/profiler-core/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>guava</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
