Remove ProfilerListener.java Remove ProfilerBuilder.java

--- a/profiler-core/pom.xml
+++ b/profiler-core/pom.xml
@@ -37,6 +37,14 @@
             <artifactId>junit</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy-agent</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
