--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,16 @@
                 <artifactId>rxjava</artifactId>
                 <version>3.0.8</version>
             </dependency>
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy-agent</artifactId>
+                <version>1.10.18</version>
+            </dependency>
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy</artifactId>
+                <version>1.10.18</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
