--- a/profiler-base/pom.xml
+++ b/profiler-base/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>profiler-base</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 </project>
