--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <module>profiler-operator</module>
         <module>profiler-core</module>
         <module>profiler-base</module>
-        <module>profiler-agent-core</module>
+        <module>profiler-agent</module>
         <module>profiler-spy</module>
     </modules>
 
