--- a/profiler-agent/pom.xml
+++ b/profiler-agent/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>profiler-agent-core</artifactId>
+    <artifactId>profiler-agent</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
