--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,12 @@
                 <artifactId>commons-lang3</artifactId>
                 <version>3.10</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/org.hyperic/sigar -->
+            <dependency>
+                <groupId>com.github.oshi</groupId>
+                <artifactId>oshi-core</artifactId>
+                <version>5.3.7</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
