--- a/profiler-agent/pom.xml
+++ b/profiler-agent/pom.xml
@@ -51,8 +51,9 @@
             <version>3.10</version>
         </dependency>
         <dependency>
-            <groupId>com.github.oshi</groupId>
-            <artifactId>oshi-core</artifactId>
+            <groupId>org.hyperic</groupId>
+            <artifactId>sigar</artifactId>
+            <version>1.6.5.132</version>
         </dependency>
     </dependencies>
 
