--- a/profiler-core/pom.xml
+++ b/profiler-core/pom.xml
@@ -47,6 +47,30 @@
             <artifactId>zip4j</artifactId>
             <version>2.6.4</version>
         </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy-agent</artifactId>
+            <version>1.10.18</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>1.10.18</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>me.zyee</groupId>
+            <artifactId>profiler-agent</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.oshi</groupId>
+            <artifactId>oshi-core</artifactId>
+            <version>5.3.7</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
