--- a/profiler-agent/pom.xml
+++ b/profiler-agent/pom.xml
@@ -65,11 +65,13 @@
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-core</artifactId>
             <version>1.26</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-generator-annprocess</artifactId>
             <version>1.26</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
