--- a/profiler-benchmark/pom.xml
+++ b/profiler-benchmark/pom.xml
@@ -9,44 +9,45 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>profiler-assembly</artifactId>
+    <artifactId>profiler-benchmark</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
     <dependencies>
         <dependency>
-            <groupId>me.zyee</groupId>
-            <artifactId>profiler-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>provided</scope>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>1.26</version>
         </dependency>
         <dependency>
             <groupId>me.zyee</groupId>
-            <artifactId>profiler-benchmark</artifactId>
+            <artifactId>profiler-base</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.1.0</version>
+                <!-- 使用文档见 https://github.com/fugerit-org/freemarker-maven-plugin-->
+                <groupId>org.fugerit.java</groupId>
+                <artifactId>freemarker-maven-plugin</artifactId>
+                <version>1.0.4</version>
+                <configuration>
+                    <freeMarkerVersion>2.3.29</freeMarkerVersion>
+                </configuration>
                 <executions>
                     <execution>
+                        <id>freemarker</id>
+                        <phase>generate-sources</phase>
                         <goals>
-                            <goal>single</goal>
+                            <goal>generate</goal>
                         </goals>
-                        <phase>package</phase>
                         <configuration>
-                            <finalName>profiler</finalName>
-                            <descriptors>
-                                <descriptor>src/main/assembly/assembly.xml</descriptor>
-                            </descriptors>
+                            <sourceDirectory>src/main/freemarker</sourceDirectory>
                         </configuration>
                     </execution>
                 </executions>
