--- a/profiler-agent/pom.xml
+++ b/profiler-agent/pom.xml
@@ -61,7 +61,12 @@
             <version>5.3.7</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>me.zyee</groupId>
+            <artifactId>profiler-benchmark</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
